--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "bugs": {
     "url": "https://github.com/wojciechjsky/cardWar/issues"
   },
-  "homepage": "https://wojciechjsky.github.io//cardWar",
+  "homepage": "https://wojciechjsky.github.io/cardWar",
   "dependencies": {
     "gh-pages": "^3.1.0"
   }
